--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "docs:preview": "vitepress preview docs",
     "prepublishOnly": "npm run build:all",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "bench": "bun benchmarks/benchmarks.mts"
+    "bench": "bun benchmarks/benchmarks.ts"
   },
   "keywords": [
     "logger",
