--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -76,6 +76,11 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         path: artifacts
+    - name: Setup Bun
+      uses: oven-sh/setup-bun@v1
+      with:
+        bun-version: latest
+
 
     - name: Install dependencies
       run: bun install
