--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -1,3 +1,4 @@
+# .github/workflows/benchmarks.yml
 name: Performance Benchmarks (Bun)
 
 on:
@@ -18,49 +19,43 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Setup Bun
-      uses: oven-sh/setup-bun@v1
-      with:
-        bun-version: latest
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: latest
 
-    - name: Cache Bun dependencies
-      uses: actions/cache@v4
-      with:
-        path: ~/.bun/install/cache
-        key: bun-${{ runner.os }}-${{ hashFiles('**/bun.lockb') }}
-        restore-keys: |
-          bun-${{ runner.os }}-
+      - name: Cache Bun dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.bun/install/cache
+          key: bun-${{ runner.os }}-${{ hashFiles('**/bun.lockb') }}
+          restore-keys: |
+            bun-${{ runner.os }}-
 
-    - name: Install dependencies
-      run: bun install
+      - name: Install dependencies
+        run: bun install
 
-    - name: Build project (TypeScript)
-      shell: bash
-      run: |
-        if [ -f tsconfig.json ]; then
-          bun run tsc
-        fi
+      - name: Build project (TypeScript)
+        shell: bash
+        run: |
+          if [ -f tsconfig.json ]; then
+            bun run tsc
+          fi
 
+      - name: Run benchmark suite
+        run: bun run benchmarks/benchmarks.ts
+        env:
+          NODE_ENV: production
 
-    - name: Run benchmark suite (loggers)
-      run: bun run benchmarks/benchmarks.ts loggers
-      env:
-        NODE_ENV: production
-
-    - name: Run benchmark suite (features)
-      run: bun run benchmarks/benchmarks.ts features
-
-    - name: Upload benchmark results
-      uses: actions/upload-artifact@v4
-      with:
-        name: benchmark-results-${{ matrix.os }}
-        path: |
-          benchmarks/results/benchmark-results.json
-          benchmarks/results/spectral-features-results.json
-        retention-days: 30
+      - name: Upload benchmark results
+        uses: actions/upload-artifact@v4
+        with:
+          name: benchmark-results-${{ matrix.os }}
+          path: benchmarks/results/benchmark-results.json
+          retention-days: 30
 
   benchmark-report:
     name: Generate Benchmark Report
@@ -69,57 +64,57 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Download all benchmark artifacts
-      uses: actions/download-artifact@v4
-      with:
-        path: artifacts
-    - name: Setup Bun
-      uses: oven-sh/setup-bun@v1
-      with:
-        bun-version: latest
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: latest
 
+      - name: Download benchmark artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: benchmarks/results
 
-    - name: Install dependencies
-      run: bun install
+      - name: Install dependencies
+        run: bun install
 
-    - name: Generate benchmark report
-      run: |
-        bun run scripts/generate-benchmark-report.ts || \
-        bun run scripts/generate-benchmark-report.js
+      - name: Generate benchmark report
+        run: |
+          bun run scripts/generate-benchmark-report.ts || \
+          bun run scripts/generate-benchmark-report.js
 
-    - name: Verify report generation
-      run: |
-        if [ ! -f benchmark-report.md ]; then
-          echo "::error::Benchmark report not generated!"
-          exit 1
-        fi
+      - name: Verify report generation
+        run: |
+          if [ ! -f benchmarks/results/benchmark-report.md ]; then
+            echo "::error::Benchmark report not generated!"
+            exit 1
+          fi
 
-    - name: Post report as PR comment (if applicable)
-      uses: actions/github-script@v7
-      with:
-        script: |
-          const fs = require('fs');
-          const path = 'benchmark-report.md';
-          if (!fs.existsSync(path)) {
-            core.setFailed("No benchmark report generated");
-          } else if (context.payload.pull_request) {
-            const report = fs.readFileSync(path, 'utf8');
-            await github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.payload.pull_request.number,
-              body: report
-            });
-          }
+      - name: Post report as PR comment (if applicable)
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const fs = require('fs');
+            const reportPath = 'benchmarks/results/benchmark-report.md';
+            if (!fs.existsSync(reportPath)) {
+              core.setFailed("No benchmark report generated");
+            } else if (context.payload.pull_request) {
+              const report = fs.readFileSync(reportPath, 'utf8');
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.payload.pull_request.number,
+                body: report
+              });
+            }
 
-    - name: Upload benchmark report
-      uses: actions/upload-artifact@v4
-      with:
-        name: benchmark-report
-        path: benchmark-report.md
+      - name: Upload benchmark report
+        uses: actions/upload-artifact@v4
+        with:
+          name: benchmark-report
+          path: benchmarks/results/benchmark-report.md
 
   performance-check:
     name: Performance Regression Check
@@ -128,19 +123,24 @@ jobs:
     if: github.event_name == 'pull_request'
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Download benchmark artifacts
-      uses: actions/download-artifact@v4
-      with:
-        pattern: benchmark-results-*
-        path: artifacts
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: latest
 
-    - name: Install dependencies
-      run: bun install
+      - name: Download benchmark artifacts
+        uses: actions/download-artifact@v4
+        with:
+          pattern: benchmark-results-*
+          path: benchmarks/results
 
-    - name: Check for performance regressions
-      run: bun run scripts/check-performance-regressions.ts
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install dependencies
+        run: bun install
+
+      - name: Check for performance regressions
+        run: bun run scripts/check-performance-regressions.ts
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
