--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -45,11 +45,6 @@ jobs:
             bun run tsc
           fi
 
-      - name: Run benchmark suite
-        run: bun run benchmarks/benchmarks.ts
-        env:
-          NODE_ENV: production
-
       - name: Run improved benchmark suite
         run: bun --expose-gc run benchmarks/improved-benchmarks.ts
         env:
@@ -92,13 +87,6 @@ jobs:
           pattern: benchmark-results-*
           merge-multiple: true
 
-      - name: Download improved benchmark artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: benchmarks/results
-          pattern: improved-benchmark-results-*
-          merge-multiple: true
-
       - name: Install dependencies
         run: bun install
 
@@ -117,8 +105,8 @@ jobs:
       - name: Verify report generation
         shell: bash
         run: |
-          if [ ! -f benchmarks/results/benchmark-report.md ] && [ ! -f benchmarks/results/improved-benchmark-report.md ]; then
-            echo "::warning::No benchmark reports generated, skipping."
+          if [ ! -f benchmarks/results/benchmark-report.md ]; then
+            echo "::warning::Benchmark report not generated, skipping."
           fi
 
       - name: Post report as PR comment (if applicable)
@@ -127,10 +115,7 @@ jobs:
         with:
           script: |
             const fs = require('fs');
-            let reportPath = 'benchmarks/results/improved-benchmark-report.md';
-            if (!fs.existsSync(reportPath)) {
-              reportPath = 'benchmarks/results/benchmark-report.md';
-            }
+            const reportPath = 'benchmarks/results/benchmark-report.md';
             if (!fs.existsSync(reportPath)) {
               console.log("No benchmark report found, skipping comment.");
             } else {
@@ -143,14 +128,11 @@ jobs:
               });
             }
 
-      - name: Upload benchmark reports
+      - name: Upload benchmark report
         uses: actions/upload-artifact@v4
         with:
-          name: benchmark-reports
-          path: |
-            benchmarks/results/benchmark-report.md
-            benchmarks/results/improved-benchmark-report.md
-          retention-days: 30
+          name: benchmark-report
+          path: benchmarks/results/benchmark-report.md
 
   performance-check:
     name: Performance Regression Check
@@ -171,13 +153,6 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           pattern: benchmark-results-*
-          path: benchmarks/results
-          merge-multiple: true
-
-      - name: Download improved benchmark artifacts
-        uses: actions/download-artifact@v4
-        with:
-          pattern: improved-benchmark-results-*
           path: benchmarks/results
           merge-multiple: true
 
