--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -35,8 +35,11 @@ jobs:
           restore-keys: |
             bun-${{ runner.os }}-
 
-      - name: Install dependencies
-        run: bun install
+      - name: Install latest SpectralLogs clean
+        run: |
+          rm -f bun.lockb
+          bun add spectrallogs@latest
+
 
       - name: Build project (TypeScript)
         shell: bash
