--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -27,8 +27,10 @@ jobs:
           node-version: 20
           cache: npm
       
-      - name: Install
-        run: npm install
+      - name: Clean node modules
+        run: |
+          rm -rf node_modules package-lock.json
+          npm install
 
       - name: Build docs
         run: npm run docs:build
